--- a/local.yml
+++ b/local.yml
@@ -14,6 +14,7 @@
         users__accounts:
           - name: 'devin'
             groups: ['admins']
+        users__default_shell: 'bash'
     - role: debops.debops.sshd
       vars:
         sshd__ports: ['218']
